--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ disqus:
 # Build settings
 markdown: kramdown
 highlighter: rouge # or pygments or null
-theme: jekyll-sleek
+theme: cayman
 exclude:
   - README.md
   - node_modules
