--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Sleek # your site title
+title: Matias Energy-store # your site title
 author: GitHub User
 email: your-email@domain.com # email for form submission, you also have to change it in _js/scripts.js
 description: > # this means to ignore newlines until "baseurl:"
@@ -6,8 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://janczizikow.github.io/sleek" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
+url: "https://san-matias.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
 instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 social:
@@ -21,7 +20,7 @@ social:
     - https://keybase.io/benbalter
 
 disqus:
-  shortname: janczizikow # to enable comments replace with your_disqus_shortname
+  shortname: Matias # to enable comments replace with your_disqus_shortname
 
 # Build settings
 markdown: kramdown
