--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,18 @@
 title: Matias Energy-store # your site title
-author: GitHub User
-email: your-email@domain.com # email for form submission, you also have to change it in _js/scripts.js
+author: Matias
+email: deka5224@gmail.com # email for form submission, you also have to change it in _js/scripts.js
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://san-matias.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
+github_username:  san-matias # replace with your_github_username or comment to remove link from footer
 instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 social:
-  name: Your Name
+  name: Matias
   links:
-    - https://twitter.com/BenBalter
     - https://www.facebook.com/ben.balter
-    - https://www.linkedin.com/in/BenBalter
     - https://plus.google.com/+BenBalter
     - https://github.com/benbalter
     - https://keybase.io/benbalter
