--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Matias Energy-store # your site title
+title: Matias container # your site title
 author: Matias
 email: deka5224@gmail.com # email for form submission, you also have to change it in _js/scripts.js
 description: > # this means to ignore newlines until "baseurl:"
