--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lazysizes": "^4.0.1",
     "normalize.css": "^7.0.0",
     "picturefill": "^3.0.2",
+    "tui-editor": "^1.2.6",
     "velocity-animate": "^1.5.0"
   },
   "devDependencies": {
